css navbar to match design

--- a/client/src/components/NavBar/navbar.scss
+++ b/client/src/components/NavBar/navbar.scss
@@ -8,6 +8,8 @@
     text-emphasis-color: white;
     background-color: rgb(39, 39, 46);
     border-color: rgb(39, 39, 46);
+    text-transform: uppercase;
+    padding: 0.4em 2em 0.4em 2em;
 }
 
 .btn-outline-primary:hover, .btn-outline-primary:active{
@@ -16,6 +18,8 @@
     text-emphasis-color: white;
     background-color: white;
     border-color: rgb(39, 39, 46);
+    text-transform: uppercase;
+    padding: 0.4em 2em 0.4em 2em;
 }
 
 .w-100{
