--- a/client/src/components/Signout/signout.scss
+++ b/client/src/components/Signout/signout.scss
@@ -3,10 +3,14 @@
     font-weight: 600;
     background-color: white;
     border-color: rgb(39, 39, 46);
+    text-transform: uppercase;
+    padding: 0.4em 2em 0.4em 2em;
 }
 #signout:active, #signout:hover{
     color: rgb(39, 39, 46);
     font-weight: 600;
     background-color: white;
     border-color: rgb(39, 39, 46);
+    text-transform: uppercase;
+    padding: 0.4em 2em 0.4em 2em;
 }
