--- a/client/src/components/ViewBooking/viewBooking.scss
+++ b/client/src/components/ViewBooking/viewBooking.scss
@@ -7,13 +7,13 @@
 #modify{
     margin-inline-end: auto;
 }
-#button1, #modify{
+#remove, #modify{
     color: rgb(39, 39, 46);
     font-weight: 600;
     background-color: white;
     border-color: rgb(39, 39, 46);
 }
-#button1:active, #button1:hover, #modify:hover, #modify:active{
+#remove:active, #remove:hover, #modify:hover, #modify:active{
     color: white;
     font-weight: 600;
     background-color: rgb(39, 39, 46);
