change the navbar to match design

--- a/client/src/components/Signout/signout.scss
+++ b/client/src/components/Signout/signout.scss
@@ -7,9 +7,9 @@
     padding: 0.4em 2em 0.4em 2em;
 }
 #signout:active, #signout:hover{
-    color: rgb(39, 39, 46);
+    color: white;
     font-weight: 600;
-    background-color: white;
+    background-color: rgb(39, 39, 46);
     border-color: rgb(39, 39, 46);
     text-transform: uppercase;
     padding: 0.4em 2em 0.4em 2em;
