--- a/client/src/components/Stylesheet.css
+++ b/client/src/components/Stylesheet.css
@@ -1,10 +1,7 @@
-
-
-
 .pic {
     background-image: url("FINAL HOME PAGE.JPG");
     height: 550px;
-    opacity: 80%;
+    /* opacity: 80%; */
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
