--- a/client/src/components/Order/order.scss
+++ b/client/src/components/Order/order.scss
@@ -1,23 +1,24 @@
-#submit{
+#orderContainer{
+    background-color: rgba(255, 255, 255, 0.815);
+}
+
+#addToCartButton, #submitOrder{
     color: white;
     font-weight: 600;
+    text-emphasis-color: white;
     background-color: rgb(39, 39, 46);
     border-color: rgb(39, 39, 46);
     text-transform: uppercase;
-    padding: 0.4em 2em 0.4em 2em;
-}
-#submit:active, #submit:hover{
-    color: rgb(39, 39, 46);
-    font-weight: 600;
-    background-color: white;
-    border-color: rgb(39, 39, 46);
-    text-transform: uppercase;
-    padding: 0.4em 2em 0.4em 2em;
-}
-.form-check{
     margin-bottom: 1em;
 }
 
-.form-group{
-    width: 50%;
+#addToCartButton:hover, #addToCartButton:active,
+ #submitOrder:active, #submitOrder:hover{
+    color: rgb(39, 39, 46);
+    font-weight: 600;
+    text-emphasis-color: white;
+    background-color: white;
+    border-color: rgb(39, 39, 46);
+    text-transform: uppercase;
+    margin-bottom: 1em;
 }
