--- a/client/src/components/ViewBooking/viewBooking.scss
+++ b/client/src/components/ViewBooking/viewBooking.scss
@@ -22,3 +22,9 @@
     background-color: rgb(39, 39, 46);
     border-color: rgb(39, 39, 46);
 }
+
+.card{
+    background-color: rgba(255, 255, 255, 0.815) !important;
+    border-radius: 0.4em;
+    border: rgba(255, 255, 255, 0.815);
+}
